--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.11.0",
     "framer-motion": "^12.23.12",
+    "install": "^0.13.0",
     "lucide-react": "^0.534.0",
+    "npm": "^11.6.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-masonry-css": "^1.0.16",
     "react-router-dom": "^7.7.1",
     "react-scripts": "5.0.1",
     "tailwind-merge": "^3.3.1",
