--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "npm": "^11.6.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.6.0",
     "react-masonry-css": "^1.0.16",
     "react-router-dom": "^7.7.1",
     "react-scripts": "5.0.1",
